--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "zenocart",
   "version": "1.0.0",
   "description": "e-commerce application",
-  "main": "index.js",
   "scripts": {
-    "build": "npm install --prefix frontend && npm run build --prefix frontend",
-    "start": "npm install --prefix backend && npm run start --prefix backend"
+    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
+    "start": "npm run start --prefix backend"
   },
   "keywords": [],
   "author": "arijit mondal",
